--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Stint+Ultra+Condensed&display=swap');
-
-.logo-font{
+.logo-font {
     font-family: 'Kaushan Script', cursive;
 }
 
-.log-bg{
+.log-bg {
     background-color: #f2f5f5;
 }
 
-.nav-link div ul{
+.nav-link div ul {
     display: none;
     position: absolute;
 }
 
-.nav-link div:hover ul{
+.nav-link div:hover ul {
     display: block;
 }
 
-.logo{
+.logo {
     width: 300px;
 }
 
-.log-in{
+.log-in {
     display: flex;
     background-color: #f2f5f5;
     position: absolute;
@@ -31,12 +30,12 @@
     border-radius: 10px;
 }
 
-.container1{
+.container1 {
     padding-top: 70px;
     margin-right: 40px;
 }
 
-.container2{
+.container2 {
     max-width: 330px;
     text-align: center;
     background-color: #ffffff;
@@ -45,17 +44,17 @@
     box-shadow: 10px 10px 15px #c1baba;
 }
 
-#title{
+#title {
     background-color: #ffffff;
     padding-bottom: 20px;
 }
 
-.form-content{
+.form-content {
     background-color: #ffffff;
     padding-bottom: 10px;
 }
 
-.inp{
+.inp {
     width: 300px;
     height: 20px;
     margin-bottom: 5px;
@@ -65,16 +64,18 @@
     padding: 5px;
 }
 
-.inp:focus,.con-inp:focus{
+.inp:focus,
+.con-inp:focus {
     border: none;
     outline: gainsboro solid 2px;
 }
 
-.forget-password{
+.forget-password {
     background-color: #ffffff;
     color: black;
 }
-.sub-btn{
+
+.sub-btn {
     width: 150px;
     padding: 5px;
     cursor: pointer;
@@ -83,11 +84,11 @@
     border-radius: 5px;
 }
 
-.no-acc{
+.no-acc {
     margin: 2px;
 }
 
-.sign-up{
+.sign-up {
     width: 150px;
     padding: 5px 50px;
     text-decoration: none;
@@ -96,10 +97,33 @@
     border-radius: 5px;
 }
 
-.sign-up:hover{
+.sign-up:hover {
     background-color: red;
 }
 
-.nth:nth-child(even){
+.nth:nth-child(even) {
     background-color: #ececec;
+}
+
+.hove {
+    display: inline-block;
+    position: relative;
+}
+
+.hove:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.hove:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
