--- a/css/style.css
+++ b/css/style.css
@@ -157,41 +157,10 @@
 }
 
 
-/* PROJECT */
-
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-}
-
-.flip-card-front,
-.flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.flip-card-back {
-    background-color: #dad8d8;
-    color: black;
-    transform: rotateY(180deg);
-}
-
-
-/* NAVBAR RESPONSIVE  */
+/* RESPONSIVE  */
 
 @media (max-width: 639px) {
+    /* NAVBAR */
     #menu-items {
         position: fixed;
         top: 65px;
@@ -206,5 +175,15 @@
     }
     #menu-items div ul li {
         padding: 20px;
+    }
+}
+
+@media (min-width: 639px) {
+    /* PROJECTS */
+    .card:hover .show {
+        display: none;
+    }
+    .card:hover .hide {
+        display: block;
     }
 }
