--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,37 @@
 }
 
 
+/* DRUM */
+
+.w {
+    background-image: url("/image/tom1.png");
+}
+
+.a {
+    background-image: url("/image/tom2.png");
+}
+
+.s {
+    background-image: url("/image/tom3.png");
+}
+
+.d {
+    background-image: url("/image/tom4.png");
+}
+
+.j {
+    background-image: url("/image/snare.png");
+}
+
+.k {
+    background-image: url("/image/crash.png");
+}
+
+.l {
+    background-image: url("/image/kick.png");
+}
+
+
 /* RESPONSIVE  */
 
 @media (max-width: 639px) {
